# 3D-Slicer

./: README.md
MyModule/: CMakeLists.txt
MyModule/MyModule/: CMakeLists.txt  MyModule.py
MyModule/MyModule/Data/: transform.h5
